force-app/main/default/objects/Bid_Placed__e/Bid_Placed__e.object-meta.xml
<CustomObject>
    <description>Published when a bid is placed on an auction listing</description>
    <label>Bid Placed</label>
    <pluralLabel>Bids Placed</pluralLabel>
</CustomObject>