force-app/main/default/objects/Bid_Placed__e/fields/Listing_Id__c.field-meta.xml
<CustomField>
    <fullName>Listing_Id__c</fullName>
    <label>Listing ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>