force-app/main/default/objects/Bid_Placed__e/fields/New_Bid_Amount__c.field-meta.xml
<CustomField>
    <fullName>New_Bid_Amount__c</fullName>
    <label>New Bid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>